--- a/style/index.css
+++ b/style/index.css
@@ -1,7 +1,7 @@
 span {
   color: aqua;
 }
-#click {
+.click {
   background-color: #4caf50;
   border: 2px solid #4caf50;
   padding: 10px 15px;
@@ -13,4 +13,17 @@ span {
   list-style: none;
   font-size: larger;
   font-weight: 700;
+}
+.click-to-youtube {
+  background: transparent;
+  border: 2px solid #4caf50;
+  padding: 10px 15px;
+  color: #4caf50;
+  margin-bottom: 20px;
+  border-radius: 5px;
+}
+.click-to-youtube:hover {
+  background-color: #4caf50;
+  color: #fff;
+  cursor: pointer;
 }
