--- a/style/index.css
+++ b/style/index.css
@@ -34,3 +34,17 @@ span {
 .card {
   margin-bottom: 20px;
 }
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.list {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  margin-top: 15px;
+}
+nav {
+  background: aliceblue;
+}
