--- a/style/index.css
+++ b/style/index.css
@@ -52,3 +52,10 @@ nav {
 .list a {
   text-decoration: none;
 }
+.section-two {
+  background: #f7f7f7;
+  padding: 80px 0px;
+}
+/* .contact-image {
+  width: 100%;
+} */
