--- a/style/index.css
+++ b/style/index.css
@@ -31,6 +31,12 @@ span {
   background: #a4cea6;
   padding: 80px 0px;
 }
+.five {
+  background: url(../assets/login.jpeg);
+  padding: 80px 0px;
+
+  background-size: cover;
+}
 .xyz {
   padding: 20px;
   background: #fff;
@@ -56,6 +62,11 @@ nav {
   background: #f7f7f7;
   padding: 80px 0px;
 }
-/* .contact-image {
+.contact-image {
   width: 100%;
-} */
+}
+.xyz1 {
+  margin-top: -200px;
+  position: relative;
+  z-index: 11;
+}
